--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -25,6 +25,10 @@ MinimumiOSVersion=IOS_10
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/FPSNow")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/FPSNow")
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/FPSNow")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/FPSNow")
++ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/FPSNow")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/FPSNow")
++ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/FPSNow")
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
